# staged-gg

./: .stylish-haskell.yaml  .travis.yml  cabal.project  staged-gg.cabal
.github/workflows/: haskell-ci.yml
src/Generics/Deriving/TH/: Internal.hs
src/Staged/GHC/: Generics.hs
src/Staged/GHC/Generics/: Examples.hs  FakeGeneric1.hs  GHCish.hs  Generic.hs  Instances.hs  RepTypes.hs  TH.hs  Types.hs
src/Staged/GHC/Generics/Examples/: Foo.hs
staged-gg-examples/: staged-gg-examples.cabal
staged-gg-examples/src/Staged/GHC/Generics/Examples/: Foo.hs
