cabal-version: 2.2
name:          staged-gg-examples
version:       0.1
synopsis:      GHC.Generics style staged generics examples
category:      Staged, Generics
description:   GHC.Generics style staged generics examples...
author:        Oleg Grenrus, Andres Löh
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       BSD-3-Clause
license-file:  LICENSE
tested-with:   GHC ==9.0.1

source-repository head
  type:     git
  location: https://github.com/phadej/staged.git
  subdir:   staged-gg

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src

  -- ghc-boot dependencies
  build-depends:
    , base              ^>=4.15

  -- staged-gg
  build-depends:
    , staged-gg

  -- staged generics
  exposed-modules:
    Staged.GHC.Generics.Examples
    Staged.GHC.Generics.Examples.Foo
    Staged.GHC.Generics.Examples.Functor
    Staged.GHC.Generics.Examples.Monoid
